<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/logo2" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:fontFamily="@font/arima_madurai_bold"
                android:text="Welcome,"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorFacebook"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arima_madurai_bold"
                android:text="Sign in to continue."
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/colorFacebook"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_xxlarge" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arima_madurai_bold"
                android:text="Email"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_80"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:fontFamily="@font/arima_madurai_bold"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/grey_80"
                android:theme="@style/EditText.Blue" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arima_madurai_bold"
                android:text="Password"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_80"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:fontFamily="@font/arima_madurai_bold"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/grey_80"
                android:theme="@style/EditText.Blue" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end"
                android:layout_marginTop="@dimen/spacing_medium"
                android:clickable="true"
                android:fontFamily="@font/arima_madurai_bold"
                android:text="Forgot Password?"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_60"
                android:textStyle="bold"
                android:visibility="gone" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mxlarge" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:background="@drawable/shape_button"
                android:fontFamily="@font/arima_madurai_bold"
                android:text="Sign In"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="bottom|center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_mlarge">

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/grey_60" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arima_madurai_bold"
                    android:text="  New user? "
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_60" />

                <TextView
                    android:id="@+id/buttonEmailSign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:fontFamily="@font/arima_madurai_bold"
                    android:text="Sign Up  "
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorFacebook"
                    android:textStyle="bold" />

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/grey_60" />


            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="218dp"
            android:layout_marginBottom="273dp"
            android:background="@drawable/loading"
            android:outlineAmbientShadowColor="@color/colorFacebook"
            android:outlineSpotShadowColor="@color/colorFacebook" />

    </RelativeLayout>

</LinearLayout>